BAC-659 Add merge password accounts
