# doc/swagger.yaml
@@ -108,7 +108,7 @@ paths:
         "200":
           description: OK
           schema:
-            $ref: "#/definitions/EmptyResponse"
+            $ref: "#/definitions/PasswordInitLinkResponse"
         "400":
           description: Bad Request
           schema:
@@ -117,6 +117,10 @@ paths:
           description: Not auth. Auth token required
           schema:
             $ref: "#/definitions/ErrorResponse"
+        "429":
+          description: Too many code requests
+          schema:
+            $ref: "#/definitions/TooManyErrorResponse"
       tags:
         - auth
       security:
@@ -143,6 +147,10 @@ paths:
             $ref: "#/definitions/ErrorResponse"
         "401":
           description: Not auth. Auth token required
+          schema:
+            $ref: "#/definitions/ErrorResponse"
+        "409":
+          description: Conflict. Merge account
           schema:
             $ref: "#/definitions/ErrorResponse"
       tags:
@@ -603,7 +611,6 @@ definitions:
       - type
       - uid
       - password
-      - code
 
   SignInRequest:
     properties:
@@ -697,6 +704,21 @@ definitions:
         type: string
     required:
       - type
+
+  PasswordInitLinkResponse:
+    type: object
+    properties:
+      result:
+        type: boolean
+        example: true
+      action:
+        type: string
+        example: link
+        enum:
+          - link
+          - merge
+      confirmCodeRequired:
+        type: boolean
 
   CheckLoginFieldResponse:
     properties:
